# gmail-mcp-server

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
gmail/: main.py  service.py
gmail_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gmail/: auth.py  models.py  service.py
src/gmail_mcp_server/: main.py
